<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TraficoSV</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_compose">Compose</string>
    <string name="hello_world">Hello world!</string>
    <string name="tweets_count">Tweets</string>
    <string name="tweet_detail_followers">Seguidores</string>
    <string name="tweet_detail_following">Siguiendo</string>
    <string name="app_title">TraficoSV - Jwebes de Apps</string>
    <string name="sample_text">Sample Text</string>
    <string name="content_description">Image</string>


</resources>
